/*
 * @begin:license
 *
 * Copyright (c) 2015-2019, Benjamin Niemann <pink@odahoda.de>
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License along
 * with this program; if not, write to the Free Software Foundation, Inc.,
 * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 *
 * @end:license
 */

syntax = "proto2";

package noisicaa.pb;

import "noisicaa/builtin_nodes/midi_cc_to_cv/model.proto";

message UpdateMidiCCtoCV {
  required uint64 node_id = 1;
}

message CreateMidiCCtoCVChannel {
  required uint64 node_id = 1;
  optional uint32 index = 2;
}

message UpdateMidiCCtoCVChannel {
  required uint64 channel_id = 1;
  optional MidiCCtoCVChannel.Type set_type = 2;
  optional uint32 set_midi_channel = 3;
  optional uint32 set_midi_controller = 4;
  optional float set_min_value = 5;
  optional float set_max_value = 6;
  optional bool set_log_scale = 7;
}

message DeleteMidiCCtoCVChannel {
  required uint64 channel_id = 1;
}
